Helm_TodoAppMicro_Services/Get_Task_TodoApplication/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-task
spec:
  replicas: 2
  selector:
    matchLabels:
      app: get-task
  template:
    metadata:
      labels:
        app: get-task
    spec:
      containers:
      - name: myapp
        image: todoappcontainer.azurecr.io/gettask:latest
        ports:
        - containerPort: 8000
