Helm_TodoAppMicro_Services/Get_Task_TodoApplication/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: get-task
  labels:
    name: get-task
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: gettask.dev28.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: get-task
            port: 
              number: 80
